--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,8 @@ jobs:
         hugo-version: "latest"
 
     - name: Build
-      run: hugo --minify
+      run: hugo --minify || (echo "Build failed with exit code $?"; exit 1)
+
 
     - name: Deploy
       uses: peaceiris/actions-gh-pages@v3
