Added content, footer work

--- a/config.toml
+++ b/config.toml
@@ -4,3 +4,4 @@ title = 'Garrett Siegel | Frontend Developer and Graphic Designer'
 
 [params]
 name = 'Garrett Siegel'
+email = 'garrett@submurgedcreative.com'
