--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Welcome to my personal portfolio site! My name is Garrett Siegel, and I am a front-end developer and graphic designer with over 5 years of experience in the industry. I specialize in creating exceptional websites and seamless user experiences.",
   "main": "index.js",
   "scripts": {
-    "dev": "hugo server -D",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "hugo server -D"
   },
   "author": "",
   "license": "ISC"
